--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +12,7 @@ body {
   left: 0;
   font-family: "Roboto-Regular", Arial, Helvetica, sans-serif;
   color: #393939;
-  background-color: #fff;
+  background-color: #f3f3f3;
   line-height: 1.5;
 }
 
@@ -34,19 +35,35 @@ body {
   justify-content: space-between;
 }
 
+.btn-web {
+  padding: 10px 15px;
+  border: none;
+  background: #2f904b;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+a {
+  text-decoration: none;
+}
+
 ul, li {
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
 .container_web {
+  position: relative;
   width: 100%;
   min-height: 100vh;
 }
 .container_web header {
   width: 100%;
-  border: 1px solid #000;
-  position: fixed;
+  z-index: 3;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .container_web header .header {
   padding: 20px 0;
@@ -75,6 +92,7 @@ ul, li {
   text-align: center;
 }
 .container_web header .header .layout .nav_wrapp .head_nav .item_nav {
+  font-weight: 500;
   list-style-type: none;
   display: inline-block;
   line-height: 2.8em;
@@ -88,12 +106,11 @@ ul, li {
 }
 .container_web header .header .layout .nav_wrapp .head_nav .item_nav a {
   text-decoration: none;
-  color: #000;
+  color: #fff;
 }
 .container_web header .header .layout .head_right {
   padding: 10px 0;
   text-align: right;
-  border: 1px solid #000;
 }
 .container_web header .header .layout .head_right .search {
   position: relative;
@@ -101,24 +118,244 @@ ul, li {
 .container_web header .header .layout .head_right .search input {
   background: none;
   font-size: 14px;
+  color: #fff;
+  padding: 5px 0px 5px 25px;
   border-radius: 8px;
-  padding-left: 10px;
-  border: 2px solid #2f904b;
+  border: 1px solid #2f904b;
 }
 .container_web header .header .layout .head_right .search input:focus {
   outline: none;
-  border: 2px solid #2f904b;
+  border: 1px solid #2f904b;
 }
 .container_web header .header .layout .head_right .search i {
-  color: #000;
+  color: #fff;
   font-size: 20px;
   position: absolute;
-  right: 4px;
+  left: 4px;
+}
+.container_web header .header .layout .head_right .caller {
+  padding: 5px 50px 5px 10px;
+  border-radius: 7px;
+  background: #2f904b;
+  text-align: left;
+  margin-left: 15px;
+}
+.container_web header .header .layout .head_right .caller i {
+  font-size: 20px;
+  margin-right: 10px;
+  filter: invert(50%) sepia(100%) saturate(297%) hue-rotate(333deg) brightness(103%) contrast(105%);
+}
+.container_web header .header .layout .head_right .caller .contact_phone {
+  font-size: 13px;
+  color: #fff;
+}
+.container_web header .header .layout .head_right .caller .contact_phone span {
+  font-size: 18px;
+  font-weight: 600;
 }
 .container_web main {
   width: 100%;
-  height: 100%;
-  border: 1px solid #000;
+  z-index: 1;
+  height: 100vh;
+}
+.container_web main .slider_banner {
+  transition: transform 0.5s ease-in-out;
+  width: 100%;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+}
+.container_web main .slider_banner .item_slider {
+  flex: 0 0 auto;
+  width: 100%;
+  aspect-ratio: 1600/670;
+  position: relative; /* Tỷ lệ khung hình của ảnh */
+}
+.container_web main .slider_banner .item_slider img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+.container_web main .introduct {
+  margin-top: 40px;
+}
+.container_web main .introduct .heading_intro {
+  max-width: 50%;
+}
+.container_web main .introduct .heading_intro h1, .container_web main .introduct .heading_intro h2 {
+  font-size: 40px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: "Impact";
+  letter-spacing: 0.05em;
+}
+.container_web main .introduct .heading_intro h1 {
+  color: #2f904b;
+}
+.container_web main .introduct .heading_intro .company_intro {
+  max-width: 80%;
+}
+.container_web main .introduct .heading_intro .company_intro .text_intro {
+  text-align: left;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  unicode-bidi: isolate;
+  line-height: 2.5rem;
+}
+.container_web main .introduct .company_intro_img {
+  width: 100%;
+}
+.container_web main .introduct .company_intro_img img {
+  width: 100%;
+  filter: drop-shadow(1px 1px 15px #2f904b);
+}
+.container_web main .index_product {
+  margin-top: 80px;
+}
+.container_web main .index_product .product_tab {
+  padding-bottom: 20px;
+}
+.container_web main .index_product .product_tab .tab_item {
+  width: calc(25% - 20px);
+  gap: 20px;
+  background: #000;
+  padding: 10px 0;
+  font-size: 18px;
+  font-weight: 500;
+  color: #fff;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.container_web main .index_product .product_tab .tab_item.active {
+  background: #2f904b;
+}
+.container_web main .index_product .list_card .list_card_container {
+  display: none;
+}
+.container_web main .index_product .list_card .list_card_container .arrow_card .item_card {
+  gap: 20px;
+  width: calc(25% - 20px);
+}
+.container_web main .index_product .list_card .list_card_container .arrow_card .item_card img {
+  width: 100%;
+  object-fit: cover;
+}
+.container_web main .index_product .list_card .list_card_container.active {
+  display: block;
+}
+.container_web main .index_news {
+  margin-top: 80px;
+}
+.container_web main .index_news .heading_news {
+  font-size: 50px;
+  font-family: "Impact";
+  color: #2f904b;
+  text-transform: uppercase;
+}
+.container_web main .index_news .item_inner {
+  margin-top: 30px;
+  gap: 30px;
+}
+.container_web main .index_news .item_inner .text_inner {
+  width: 50%;
+  max-width: 50%;
+  text-align: right;
+}
+.container_web main .index_news .item_inner .text_inner .item_time {
+  font-size: 25px;
+  font-weight: 600;
+  color: #000;
+}
+.container_web main .index_news .item_inner .text_inner .item_question {
+  margin-top: 20px;
+  font-weight: 500;
+  font-size: 20px;
+  color: #2f904b;
+  text-decoration: underline;
+}
+.container_web main .index_news .item_inner .text_inner p {
+  margin-top: 25px;
+  font-size: 16px;
+  line-height: 2;
+}
+.container_web main .index_news .item_inner .img_inner {
+  width: 50%;
+}
+.container_web main .index_news .item_inner .img_inner img {
+  width: 100%;
+  object-fit: cover;
+}
+.container_web footer {
+  width: 100%;
+  margin-top: 30px;
+  background: #000;
+  padding-top: 20px;
+}
+.container_web footer .company_subscribe {
+  max-width: 80%;
+  padding-bottom: 15px;
+  border-bottom: 1.5px solid #2f904b;
+  margin: 0 auto;
+}
+.container_web footer .company_subscribe .subscribe_title {
+  text-align: center;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.7607843137);
+}
+.container_web footer .company_subscribe .btn-footer {
+  margin-top: 20px;
+  border-radius: 10px;
+  padding: 5px 20px;
+  font-weight: 550;
+  background-image: linear-gradient(to right, #2f904b 30%, #5fe786 70%, #303030 100%);
+  box-shadow: 0 3px 3px rgba(255, 255, 255, 0.15) inset, -1px -1px 3px rgba(0, 0, 0, 0.5) inset;
+}
+.container_web footer .footer_contact_list {
+  width: 85%;
+  margin: 0 auto 15px;
+  text-align: center;
+  padding-top: 8px;
+}
+.container_web footer .footer_contact_list ul {
+  width: 100%;
+}
+.container_web footer .footer_contact_list ul .item_address {
+  width: calc(33.3333333333% - 30px);
+  gap: 30px;
+  color: rgba(255, 255, 255, 0.6588235294);
+}
+.container_web footer .footer_contact_list ul .item_address i {
+  font-size: 20px;
+}
+.container_web footer .foot_sns {
+  gap: 10px;
+}
+.container_web footer .foot_sns .logo_contact {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  cursor: pointer;
+}
+.container_web footer .foot_sns .logo_contact img {
+  width: 100%;
+  object-fit: cover;
+}
+.container_web footer .foot_bar {
+  margin-top: 30px;
+  width: 100%;
+  background: #2f904b;
+  color: #fff;
+  font-size: 17px;
+  padding: 10px 0;
+}
+.container_web footer .foot_bar a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 17px;
 }
 
 /*# sourceMappingURL=app.css.map */
