--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -12,7 +12,7 @@ body{
     left: 0;
     font-family: 'Roboto-Regular', Arial, Helvetica, sans-serif;
     color: #393939;
-    background-color: #fff;
+    background-color: #f3f3f3;
     line-height: 1.5;
 }
 /* Global */
@@ -31,19 +31,33 @@ body{
     align-items: center;
     justify-content: space-between;
 }
+.btn-web{
+    padding: 10px 15px;
+    border: none;
+    background: #2f904b;
+    text-transform: uppercase;
+    color: #fff;
+}
+a{
+    text-decoration: none;
+}
 ul,li{
     margin: 0;
     padding: 0;
+    list-style-type: none;
 }
 
 .container_web{
+    position: relative;
     width: 100%;
     min-height: 100vh;
 
     header{
         width: 100%;
-        border: 1px solid #000;
-        position: fixed;
+        z-index: 3;
+        position: absolute;
+        top: 0;
+        left: 0;
         .header{
             padding: 20px 0;
             width: 100%;
@@ -69,6 +83,7 @@ ul,li{
                     .head_nav{
                         text-align: center;
                         .item_nav{
+                            font-weight: 500;
                             list-style-type: none;
                             display: inline-block;
                             line-height: 2.8em;
@@ -81,7 +96,7 @@ ul,li{
                             text-transform: uppercase;
                             a{
                                 text-decoration: none;
-                                color: #000;
+                                color: #fff;
                             }
                         }
                     }
@@ -89,25 +104,44 @@ ul,li{
                 .head_right{
                     padding: 10px 0;
                     text-align: right;
-                    border: 1px solid #000;
                     .search{
                         position: relative;
                         input{
                             background: none;
                             font-size: 14px;
+                            color: #fff;
+                            padding: 5px 0px 5px 25px;
                             border-radius: 8px;
-                            padding-left: 10px;
-                            border: 2px solid #2f904b;
+                            border: 1px solid #2f904b;
                         }
                         input:focus {
                             outline: none;
-                            border: 2px solid #2f904b;
+                            border: 1px solid #2f904b;
                         }
                         i{
-                            color: #000;
+                            color: #fff;
                             font-size: 20px;
                             position: absolute;
-                            right: 4px;
+                            left: 4px;
+                        }
+                    }
+                    .caller{
+                        padding: 5px 50px 5px 10px;                        border-radius: 7px;
+                        background: #2f904b;
+                        text-align: left;
+                        margin-left: 15px;
+                        i{
+                            font-size: 20px;
+                            margin-right: 10px;
+                            filter: invert(50%) sepia(100%) saturate(297%) hue-rotate(333deg) brightness(103%) contrast(105%);
+                        }
+                        .contact_phone{
+                            font-size: 13px;
+                            color: #fff;
+                            span{
+                                font-size: 18px;
+                                font-weight: 600;
+                            }
                         }
                     }
                 }
@@ -117,7 +151,218 @@ ul,li{
     }
     main{
         width: 100%;
-        height: 100%;
-        border: 1px solid #000;
+        z-index: 1;
+        height: 100vh;
+        .slider_banner{
+            transition: transform 0.5s ease-in-out;
+            width: 100%;
+            display: flex;
+            flex-wrap: nowrap;
+            overflow-x: auto;
+            .item_slider{
+                flex: 0 0 auto;
+                width: 100%;
+                aspect-ratio: 1600 / 670;
+                position: relative; /* Tỷ lệ khung hình của ảnh */
+                img{
+                    width: 100%;
+                    height: auto;
+                    object-fit: cover;
+                } 
+            }
+        }
+        // .slider_banner::-webkit-scrollbar{
+        //     display: none;
+        // }
+        .introduct{
+            margin-top: 40px;
+            .heading_intro{
+                max-width: 50%;
+                h1,h2{
+                    font-size: 40px;
+                    text-transform: uppercase;
+                    font-weight: 700;
+                    font-family: 'Impact';
+                    letter-spacing: .05em;
+                }
+                h1{
+                    color: #2f904b;
+                }
+                .company_intro{
+                    max-width: 80%;
+                    .text_intro{
+                        text-align: left;
+                        display: block;
+                        margin-block-start: 1em;
+                        margin-block-end: 1em;
+                        margin-inline-start: 0px;
+                        margin-inline-end: 0px;
+                        unicode-bidi: isolate;
+                        line-height: 2.5rem;
+                    }
+                }
+                
+            }
+            .company_intro_img{
+                width: 100%;
+                img{
+                    width: 100%;
+                    filter: drop-shadow(1px 1px 15px #2f904b);
+                }
+            }
+        }
+        .index_product{
+            margin-top: 80px;
+            .product_tab{
+                padding-bottom: 20px;
+                .tab_item{
+                    width: calc(100% / 4 - 20px);
+                    gap: 20px;
+                    background: #000;
+                    padding: 10px 0;
+                    font-size: 18px;
+                    font-weight: 500;
+                    color: #fff;
+                    text-transform: uppercase;
+                    cursor: pointer;
+                    
+                }
+                .tab_item.active{
+                    background: #2f904b;
+                }
+            }
+            .list_card{
+                .list_card_container{
+                    display: none;
+                    .arrow_card{
+                        .item_card{
+                            gap: 20px;
+                            width: calc(100% / 4 - 20px);
+                            img{
+                                width: 100%;
+                                object-fit: cover;
+                            }
+                        }
+                    }
+                }
+                .list_card_container.active{
+                    display: block;
+                }
+                
+            }
+        }
+
+        .index_news{
+            margin-top: 80px;
+            .heading_news{
+                font-size: 50px;
+                font-family: 'Impact';
+                color: #2f904b;
+                text-transform: uppercase;
+            }
+            .item_inner{
+                margin-top: 30px;
+                gap: 30px;
+                .text_inner{
+                    width: 50%;
+                    max-width: 50%;
+                    text-align: right;
+                    .item_time{
+                        font-size: 25px;
+                        font-weight: 600;
+                        color: #000;
+                    }
+                    .item_question{
+                        margin-top: 20px;
+                        font-weight: 500;
+                        font-size: 20px;
+                        color: #2f904b;
+                        text-decoration: underline;
+                    }
+                    p{
+                        margin-top: 25px;
+                        font-size: 16px;
+                        line-height: 2;
+                    }
+                }
+                .img_inner{
+                    width: 50%;
+                    img{
+                        width: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+    }
+    footer{
+        width: 100%;
+        margin-top: 30px;
+        background: #000;
+        padding-top: 20px;
+        .company_subscribe{
+            max-width: 80%;
+            padding-bottom: 15px;
+            border-bottom: 1.5px solid #2f904b;
+            margin: 0 auto;
+            .subscribe_title{
+                text-align: center;
+                font-size: 16px;
+                color: #ffffffc2;
+            }
+            .btn-footer{
+                margin-top: 20px;
+                border-radius: 10px;
+                padding: 5px 20px;
+                font-weight: 550;
+                background-image: linear-gradient(to right, #2f904b 30%, #5fe786 70%, #303030 100%);
+                box-shadow: 0 3px 3px rgba(255, 255, 255, .15) inset, -1px -1px 3px rgba(0, 0, 0, .5) inset;
+            }
+        }
+        .footer_contact_list{
+            width: 85%;
+            margin: 0 auto 15px;
+            text-align: center;
+            padding-top: 8px;
+            ul{
+                width: 100%;
+                .item_address{
+                    width: calc(100% / 3 - 30px);
+                    gap: 30px;
+                    color: #ffffffa8;
+                    i{
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+        .foot_sns{
+            gap: 10px;
+            .logo_contact{
+                border-radius: 50%;
+                width: 40px;
+                height: 40px;
+                overflow: hidden;
+                cursor: pointer;
+                img{
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+        .foot_bar{
+            margin-top: 30px;
+            width: 100%;
+            background: #2f904b;
+            color: #fff;
+            font-size: 17px;
+            padding: 10px 0;
+            a{
+                text-decoration: none;
+                color: #fff;
+                font-size: 17px;
+            }
+        }
+
     }
 }
