--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -51,17 +51,74 @@
                             <i class="bi bi-search"></i>
                             <input type="text" placeholder="Enter name part...">
                         </div>
+                        <div class="caller is-center">
+                            <i class="bi bi-telephone-fill"></i>
+                            <div class="contact_phone">
+                                Hãy gọi chúng tôi <br>
+                                <span>0927 444 888</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </header>
         <main>
             {{{body}}}
-        </main>
-        <footer>
+            <footer>
+                <div class="layout">
+                    <div class="company_subscribe">
+                        <div class="subscribe_title">
+                            For inquiries about our products or pricelist, please leave your email to us and we will be in touch within 24 hours.
+                        </div>
+                        <div class="btn-wrapper is-center">
+                            <button class="btn-web btn-footer">
+                                INQUIRY NOW
+                            </button>
+                        </div>
+                    </div>
 
-        </footer>
+                    <address class="footer_contact_list">
+                        <ul class="is-between company_subscribe" style="border: none;">
+                            <li class="item_address is-center">
+                                <i class="bi bi-geo-alt-fill"></i>
+                                <span>Address: 740-742 Thiên Lôi <br> Hải Phòng</span>
+                            </li>
+                            <li class="item_address is-center">
+                                <i class="bi bi-telephone-fill"></i>
+                                <span>Phone: 0927 444 888</span>
+                            </li>
+                            <li class="item_address is-center">
+                                <i class="bi bi-envelope-fill"></i>
+                                <span>info@hybridlift.vn</span>
+                            </li>
+                        </ul>
+                    </address>
+
+                    <div class="foot_sns is-center">
+                        <a href="#" class="logo_contact">
+                            <img src="/img/footer/1.png" alt="">
+                        </a>
+                        <a href="#" class="logo_contact">
+                            <img src="/img/footer/3.png" alt="">
+                        </a>
+                        <a href="#" class="logo_contact">
+                            <img src="/img/footer/2.png" alt="">
+                        </a>  
+                        <a href="#" class="logo_contact">
+                            <img src="/img/footer/4.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <section class="foot_bar is-center">
+                    Design By © 
+                    <a href="https://www.facebook.com/profile.php?id=100047916427122">
+                        HUYHUNG - 2024
+                    </a>
+                </section>
+            </footer>
+        </main>
     </div>
+    <script src="/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
