--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container_web">
-        <header>
+        <header class="header_wrapp">
             <div class="header">
                 <div class="layout is-between">
                     <figure class="logo">
@@ -20,22 +20,22 @@
                     <nav class="nav_wrapp">
                         <ul class="head_nav is-between">
                             <li class="item_nav">
-                                <a href="#">
+                                <a href="/">
                                     home
                                 </a>
                             </li>
                             <li class="item_nav">
-                                <a href="#">
-                                    product
+                                <a href="/products">
+                                    products
                                 </a>
                             </li>
                             <li class="item_nav">
-                                <a href="#">
+                                <a href="/news">
                                     news
                                 </a>
                             </li>
                             <li class="item_nav">
-                                <a href="#">
+                                <a href="/about-us">
                                     about us
                                 </a>
                             </li>
