--- a/src/resources/views/about.hbs
+++ b/src/resources/views/about.hbs
@@ -2,10 +2,142 @@
     <div class="layout is-between">
         <div class="title_about">
             <div class="heading">
-                who we are?
+                Who We Are
+            </div>
+            <div class="divider is-center">
+                <div class="line"></div>
+            </div>
+            <p class="content">
+                Xi'an Yuanqi Elevator Parts Co., Ltd. is a trading company that has been actively involved in the elevator industry for many years. The company is located in Xi'an, China, the starting point of the Silk Road. Our primary goal is to provide high quality elevator accessories, escalator accessories, electrical connection retrofit, elevator accessories/O0E and related products to global customers.
+            </p>
+
+            <div class="quality_group is-between">
+                <div class="item_quality">
+                    <i class="bi bi-gem"></i>
+                    Quality Products
+                </div>
+                <div class="item_quality">
+                    <i class="bi bi-person-fill"></i>
+                    Professional Teams
+                </div>
+                <div class="item_quality">
+                    <i class="bi bi-heart-fill"></i>
+                    Excellent Service
+                </div>
             </div>
         </div>
 
-        .wrapp
+        <div class="wrapp_image_about">
+            <img src="/img/about/1.png" alt="">
+        </div>
+    </div>
+</div>
+
+<div class="content_container">
+    <div class="wrapper">
+        <div class="content">
+            <div class="title">
+                Why Choose Us
+            </div>
+            <div class="divider is-center">
+                <div class="line"></div>
+            </div>
+            <div class="layout">
+                <p>
+                     We have a wide range of products to meet the needs of various customers, From complete elevators to elevator parts and escalator parts widely used in the industry. We pride ourselves on having a diverse portfolio of key partner brands including Otis, THSEN, SCHNDLER, KONE, MTSUBSHLCG, HTACHI and many more. Our products are mainly exported to South America and Eastern European countries, where they have received positive responses from customers.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="wrapper_about">
+    <div class="layout is-between">
+        <div class="wrapp_image_about">
+            <img src="/img/about/1.png" alt="">
+        </div>
+        <div class="title_about">
+            <div class="heading">
+                Our Team
+            </div>
+            <div class="divider is-center">
+                <div class="line"></div>
+            </div>
+            <p class="content">
+                At Xi'an Yuanqi Elevator Parts Co., Ltd., we always strive to improve our services and provide our customers with high-quality, reliable, and durable products. We believe that customer satisfaction is our number one priority, therefore, we constantly strive to achieve this goal.
+            </p>
+            <p class="content">
+                We have a dedicated team of nearly 200 people who work tirelessly to ensure that our clients' needs and requirements are met. Our team includes about 100 salesmen, more than ten technical team members, and more than ten after-sales service personnel. Our team is dedicated to providing exceptional customer service and support to all of our clients, no matter their size or location.
+            </p>
+
+        </div>
+    </div>
+</div>
+
+<div class="content_container">
+    <div class="wrapper" style="padding: 20px 0; margin: 0 0 20px 0;">
+        <div class="content">
+            <div class="title">
+                Work Environment
+            </div>
+            <div class="divider is-center">
+                <div class="line"></div>
+            </div>
+            <div class="layout">
+                <ul class="environment_list">
+                    <li class="item_environment"><img src="/img/about/1_15.webp" alt=""></li>
+                    <li class="item_environment"><img src="/img/about/1_15.webp" alt=""></li>
+                    <li class="item_environment"><img src="/img/about/1_15.webp" alt=""></li>
+                    <li class="item_environment"><img src="/img/about/1_15.webp" alt=""></li>
+                </ul>
+                <ul class="environment_list">
+                    <li class="item_environment"><img src="/img/about/1_31.webp" alt=""></li>
+                    <li class="item_environment"><img src="/img/about/1_31.webp" alt=""></li>
+                    <li class="item_environment"><img src="/img/about/1_31.webp" alt=""></li>
+                    <li class="item_environment"><img src="/img/about/1_31.webp" alt=""></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="wrapper_about">
+    <div class="heading-custumer is-center">
+        Custumer Case
+    </div>
+    <div class="divider is-center">
+        <div class="line"></div>
+    </div>
+    <div class="layout">
+        <ul class="environment_list" style="margin-top: 20px;">
+            <li class="item_environment"><img src="/img/about/1.jpg" alt=""></li>
+            <li class="item_environment"><img src="/img/about/1.jpg" alt=""></li>
+            <li class="item_environment"><img src="/img/about/1.jpg" alt=""></li>
+        </ul>
+        <p style="text-align: center; margin-top: 15px">As a company, we have grown steadily in size and revenue.  Our export value of RMB 300 million in 2022 is a testament to our commitment to serve our customers better.</p>
+    </div>
+</div>
+
+<div class="content_container .reset_padding" >
+    <div class="wrapper" style="padding: 20px 0; margin: 0;">
+        <div class="content">
+            <h3 class="title">
+                Welcome To Cooperation
+            </h3>
+            <div class="divider is-center">
+                <div class="line"></div>
+            </div>
+            <div class="layout">
+                <p>
+                     In conclusion, Xi'an Yuanqi Elevator Parts Co., Ltd. is a reliable and trustworthy company that focuses on providing excellent service to its customers. We pride ourselves on providing high-quality products, excellent customer service and reliable after-sales support.
+                </p>
+                <p class="hight_lisht" style="font-style:italic ; color:#2f904b;">
+                    If you are engaged in the elevator     industry and need reliable products, please feel free to contact us. We will be more than happy to serve you.
+                </p>
+                <div class="btn-contact-us is-center">
+                    <a href="#"><i class="bi bi-arrow-right-square-fill"></i>Contact Now</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
