--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -471,6 +472,163 @@ ul, li {
   width: 100%;
   background: #fff;
   padding: 20px 0px;
+}
+.container_web main .wrapper_about .layout {
+  align-items: unset;
+}
+.container_web main .wrapper_about .layout .title_about {
+  max-width: 55%;
+  width: 50%;
+}
+.container_web main .wrapper_about .layout .title_about .heading {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  text-align: left;
+  font-size: 28px;
+  line-height: 1.4;
+  color: #0a0a0a;
+}
+.container_web main .wrapper_about .layout .title_about .divider {
+  width: 100%;
+  justify-content: flex-start;
+}
+.container_web main .wrapper_about .layout .title_about .divider .line {
+  width: 15%;
+  border: 1px solid #2f904b;
+  height: 1px;
+}
+.container_web main .wrapper_about .layout .title_about .content {
+  margin: 15px 0 0 0;
+  padding: 8px 0;
+  font-size: 16px;
+  line-height: 1.8;
+  display: -webkit-box; /* Sử dụng box layout của Webkit */
+  -webkit-line-clamp: 4; /* Số dòng tối đa */
+  -webkit-box-orient: vertical; /* Hướng box theo chiều dọc */
+  overflow: hidden; /* Ẩn phần văn bản thừa */
+  text-overflow: ellipsis; /* Thêm dấu "..." nếu bị cắt */
+  white-space: normal;
+}
+.container_web main .wrapper_about .layout .title_about .quality_group {
+  width: 100%;
+  margin-top: 20px;
+}
+.container_web main .wrapper_about .layout .title_about .quality_group .item_quality {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 17px;
+  font-weight: 500;
+}
+.container_web main .wrapper_about .layout .title_about .quality_group .item_quality i {
+  font-size: 30px;
+  margin-right: 15px;
+  color: #2f904b;
+}
+.container_web main .wrapper_about .wrapp_image_about {
+  width: 45%;
+}
+.container_web main .wrapper_about .wrapp_image_about img {
+  width: 100%;
+  object-fit: cover;
+}
+.container_web main .wrapper_about .heading-custumer {
+  width: 100%;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 1.4;
+  color: #0a0a0a;
+}
+.container_web main .wrapper_about .divider {
+  width: 100%;
+}
+.container_web main .wrapper_about .divider .line {
+  width: 10%;
+  height: 1px;
+  border: 1px solid #2f904b;
+  margin: 20px 0;
+}
+.container_web main .wrapper_about .environment_list {
+  width: 100%;
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  align-items: center;
+}
+.container_web main .wrapper_about .environment_list .item_environment {
+  width: calc(33.3333333333% - 20px);
+}
+.container_web main .wrapper_about .environment_list .item_environment img {
+  width: 100%;
+  object-fit: cover;
+}
+.container_web main .btn-contact-us {
+  width: 100%;
+}
+.container_web main .btn-contact-us a {
+  padding: 10px 15px;
+  border: 2px solid #2f904b;
+  background: none;
+  font-size: 18px;
+  font-weight: 550;
+  border-radius: 8px;
+  color: #2f904b;
+}
+.container_web main .btn-contact-us a i {
+  color: #2f904b;
+  font-size: 20px;
+  margin-right: 10px;
+}
+.container_web main .content_container {
+  width: 100%;
+}
+.container_web main .content_container .wrapper {
+  padding-top: 70px;
+  padding-bottom: 83px;
+  margin-top: 50px;
+  margin-bottom: 40px;
+}
+.container_web main .content_container .wrapper .content {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.container_web main .content_container .wrapper .content .title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 1.4;
+  color: #0a0a0a;
+}
+.container_web main .content_container .wrapper .content .divider {
+  width: 10%;
+  padding: 20px 0;
+}
+.container_web main .content_container .wrapper .content .divider .line {
+  width: 100%;
+  height: 1px;
+  border: 1px solid #2f904b;
+}
+.container_web main .content_container .wrapper .content p {
+  text-align: center;
+  padding: 8px 0;
+  font-size: 16px;
+  line-height: 1.8;
+  display: -webkit-box; /* Sử dụng box layout của Webkit */
+  -webkit-line-clamp: 4; /* Số dòng tối đa */
+  -webkit-box-orient: vertical; /* Hướng box theo chiều dọc */
+  overflow: hidden; /* Ẩn phần văn bản thừa */
+  text-overflow: ellipsis; /* Thêm dấu "..." nếu bị cắt */
+  white-space: normal;
+}
+.container_web main .content_container .wrapper .content .environment_list {
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+  margin-top: 20px;
 }
 .container_web footer {
   width: 100%;
