--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,4 +1,5 @@
 // @import 'variables';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
     margin: 0;
@@ -479,6 +480,164 @@ ul,li{
             width: 100%;
             background: #fff;
             padding: 20px 0px;
+            .layout{
+                align-items: unset;
+                .title_about{
+                    max-width: 55%;
+                    width: 50%;
+                    .heading{
+                        font-family: "Poppins", sans-serif;
+                        font-weight: 600;
+                        text-align: left;
+                        font-size: 28px;
+                        line-height: 1.4;
+                        color: #0a0a0a;
+                    }
+                    .divider{
+                        width: 100%;
+                        justify-content: flex-start;
+                        .line{
+                            width: 15%;
+                            border: 1px solid #2f904b;
+                            height: 1px;
+                        }
+                    }
+                    .content{
+                        margin: 15px 0 0 0;
+                        padding: 8px 0;
+                        font-size: 16px;
+                        line-height: 1.8;
+                        display: -webkit-box; /* Sử dụng box layout của Webkit */
+                        -webkit-line-clamp: 4; /* Số dòng tối đa */
+                        -webkit-box-orient: vertical; /* Hướng box theo chiều dọc */
+                        overflow: hidden; /* Ẩn phần văn bản thừa */
+                        text-overflow: ellipsis; /* Thêm dấu "..." nếu bị cắt */
+                        white-space: normal;
+                    }
+                    .quality_group{
+                        width: 100%;
+                        margin-top: 20px;
+                        .item_quality{
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            font-size: 17px;
+                            font-weight: 500;
+                            i{
+                                font-size: 30px;
+                                margin-right: 15px;
+                                color: #2f904b;
+                            }
+                        }
+                    }
+                }
+            }
+            .wrapp_image_about{
+                width: 45%;
+                img{
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
+            .heading-custumer{
+                width: 100%;
+                font-family: "Poppins", sans-serif;
+                font-weight: 600;
+                font-size: 28px;
+                line-height: 1.4;
+                color: #0a0a0a;
+            }
+            .divider{
+                width: 100%;
+                .line{
+                    width: 10%;
+                    height: 1px;
+                    border: 1px solid #2f904b;
+                    margin: 20px 0;
+                }
+            }
+            .environment_list{
+                width: 100%;
+                display: flex;
+                gap: 30px;
+                justify-content: space-between;
+                align-items: center;
+                .item_environment{
+                    width: calc(100% / 3 - 20px);
+                    img{
+                        width: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+
+        }
+        .btn-contact-us{
+            width: 100%;
+            a{
+                padding: 10px 15px;
+                border: 2px solid #2f904b;
+                background: none;
+                font-size: 18px;
+                font-weight: 550;
+                border-radius: 8px;
+                color: #2f904b;
+                i{
+                    color: #2f904b;
+                    font-size: 20px;
+                    margin-right: 10px;
+                }
+            }
+        }
+        .content_container{
+            width: 100%;
+            .wrapper{
+                padding-top: 70px;
+                padding-bottom: 83px;
+                margin-top: 50px;
+                margin-bottom: 40px;
+                .content{
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    flex-direction: column;
+                    .title{
+                        font-family: "Poppins", sans-serif;
+                        font-weight: 600;
+                        font-size: 28px;
+                        line-height: 1.4;
+                        color: #0a0a0a;
+                    }
+                    .divider{
+                        width: 10%;
+                        padding: 20px 0;
+                        .line{
+                            width: 100%;
+                            height: 1px;
+                            border: 1px solid #2f904b;
+                        }
+                    }
+                    p{
+                        text-align: center;
+                        padding: 8px 0;
+                        font-size: 16px;
+                        line-height: 1.8;
+                        display: -webkit-box; /* Sử dụng box layout của Webkit */
+                        -webkit-line-clamp: 4; /* Số dòng tối đa */
+                        -webkit-box-orient: vertical; /* Hướng box theo chiều dọc */
+                        overflow: hidden; /* Ẩn phần văn bản thừa */
+                        text-overflow: ellipsis; /* Thêm dấu "..." nếu bị cắt */
+                        white-space: normal;
+                    }
+                    .environment_list{
+                        width: 100%;
+                        display: flex;
+                        gap: 20px;
+                        justify-content: space-between;
+                        margin-top: 20px;
+                    }
+                }
+            }
         }
     }
     footer{
