--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -40,7 +40,7 @@
                                 </a>
                             </li>
                             <li class="item_nav">
-                                <a href="#">
+                                <a href="/contact">
                                     contact us
                                 </a>
                             </li>
