--- a/src/resources/views/contact.hbs
+++ b/src/resources/views/contact.hbs
@@ -1,5 +1,16 @@
-<div class="layout">
+<div class="layout" style="margin-top: 75px;">
     <h3 class="name_company">
-
+        Xi'an Yuanqi Elevator Parts Co., Ltd.
     </h3>
+    <h4 class="sub_title">Looking forward to your inquiry!</h4>
+
+    <h1 class="title_form">Leave Your Message</h1>
+    <form action="" class="form_contact">
+        <ul>
+            <li><input type="text" placeholder="* Name"></li>
+            <li><input type="email" placeholder="* Email(We will reply you via email in 24 hours)"></li>
+            <li><input type="text" placeholder="* Phone/WhatsApp/WeChat (Very important)"></li>
+            <li><textarea placeholder="* Enter product details such as size, color, materials etc. and other specific requirements to receive an accurate quote."></textarea></li>
+        </ul>
+    </form>
 </div>
