--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: 0;
 }
 body{
     width: 100%;
@@ -635,6 +636,68 @@ ul,li{
                         gap: 20px;
                         justify-content: space-between;
                         margin-top: 20px;
+                    }
+                }
+            }
+        }
+
+        /* contact */
+        .name_company{
+            font-family: "Poppins,", sans-serif;
+            font-weight: 600;
+            font-size: 24px;
+            color: #2f904b;
+        }
+        .sub_title{
+            font-family: "Poppins,", sans-serif;
+            font-weight: 600;
+            color: #0a0a0a;
+            font-size: 18px
+        }
+        .title_form{
+            width: 100%;
+            background: #2f904b;
+            height: 40px;
+            line-height: 40px;
+            font-size: 16px;
+            padding: 0 20px;
+            font-weight: normal;
+            color: #fff;
+            margin: 0;
+            margin-top: 20px;
+        }
+        .form_contact{
+            width: 100%;
+            background: #fff;
+            height: 390px;
+            ul{
+                width: 100%;
+                padding: 20px 20px 5px;
+                li{
+                    position: relative;
+                    width: 100%;
+                    margin: 0 0 14px;
+                    display: flex;
+                    min-height: auto;
+                    line-height: 40px;
+                    input{
+                        border: 1px solid #eee;
+                        border-left: 3px solid #013e5a;
+                        height: 39px;
+                        padding: 0 10px;
+                        font-family: Arial, Helvetica, sans-serif;
+                        font-size: 13px;
+                        position: relative;
+                        width: 100%;
+                    }
+                    textarea{
+                        height: 95px;
+                        padding: 10px;
+                        resize: none;
+                        border: 1px solid #eee;
+                        border-left: 3px solid #013e5a;
+                        font-family: Arial, Helvetica, sans-serif;
+                        font-size: 13px;
                     }
                 }
             }
