--- a/src/resources/views/contact.hbs
+++ b/src/resources/views/contact.hbs
@@ -11,6 +11,28 @@
             <li><input type="email" placeholder="* Email(We will reply you via email in 24 hours)"></li>
             <li><input type="text" placeholder="* Phone/WhatsApp/WeChat (Very important)"></li>
             <li><textarea placeholder="* Enter product details such as size, color, materials etc. and other specific requirements to receive an accurate quote."></textarea></li>
+            <li><input type="submit" value="Send" class="submit"></li>
         </ul>
     </form>
+    <div class="sub_text">
+        <p>
+            We will strive for development by reputation, survive by quality, aim at customer satisfaction, and be guided by self-consciousness to provide customers with more high-quality and comprehensive services.
+        </p>
+    </div>
+    <ul class="infor_list">
+        <li class="item_infor">
+            <i class="bi bi-house-door-fill"></i>
+            Address: 740 - 742 Thiên Lôi, Lê Chân, Hải Phòng, Việt Nam
+        </li>
+        <li class="item_infor">
+            <i class="bi bi-envelope-fill"></i>
+            Email: hungdeptrai@gmail.com
+        </li>
+        <li class="item_infor">
+            <i class="bi bi-telephone-fill"></i>
+            0927 444 888
+        </li>
+    </ul>
+
+    <div class="divider_contact"></div>
 </div>
