--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -50,6 +50,13 @@
             <ul class="arrow_card is-between">
                 <li class="item_card">
                     <img src="/img/products/1.jpg" alt="">
+                    <div class="title_product">
+                        <h3>
+                            <a href="#">
+                                Schindler Elevator Parts Escalator Handrails SDS SWE
+                            </a>
+                        </h3>
+                    </div>
                 </li>
                 <li class="item_card">
                     <img src="/img/products/1.jpg" alt="">
