--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -683,6 +683,12 @@ ul, li {
   position: relative;
   width: 100%;
 }
+.container_web main .form_contact ul li .submit {
+  border: none;
+  background: #2f904b;
+  color: #fff;
+  font-size: 15px;
+}
 .container_web main .form_contact ul li textarea {
   height: 95px;
   padding: 10px;
@@ -691,6 +697,40 @@ ul, li {
   border-left: 3px solid #013e5a;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
+  width: 100%;
+}
+.container_web main .infor_list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.container_web main .infor_list .item_infor {
+  display: flex;
+  align-items: center;
+}
+.container_web main .infor_list .item_infor i {
+  font-size: 25px;
+  color: #2f904b;
+  margin-right: 15px;
+}
+.container_web main .divider_contact {
+  height: 1px;
+  border: none;
+  border-top: 1px dashed #c1c1c1;
+  margin: 15px 0 15px 0;
+}
+.container_web main .sub_text {
+  margin-top: 15px;
+  width: 100%;
+}
+.container_web main .sub_text p {
+  line-height: 1.5;
+  margin: 0;
+  padding: 8px 0;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.8;
 }
 .container_web footer {
   width: 100%;
