--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -690,6 +690,12 @@ ul,li{
                         position: relative;
                         width: 100%;
                     }
+                    .submit{
+                        border: none;
+                        background: #2f904b;
+                        color: #fff;
+                        font-size: 15px;
+                    }
                     textarea{
                         height: 95px;
                         padding: 10px;
@@ -698,8 +704,42 @@ ul,li{
                         border-left: 3px solid #013e5a;
                         font-family: Arial, Helvetica, sans-serif;
                         font-size: 13px;
+                        width: 100%;
                     }
                 }
+            }
+        }
+        .infor_list{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            .item_infor{
+                display: flex;
+                align-items: center;
+                i{
+                    font-size: 25px;
+                    color: #2f904b;
+                    margin-right: 15px;
+                }
+            }
+        }
+        .divider_contact{
+            height: 1px;
+            border: none;
+            border-top: 1px dashed #c1c1c1;
+            margin: 15px 0 15px 0;
+        }
+        .sub_text{
+            margin-top: 15px;
+            width: 100%;
+            p{
+                line-height: 1.5;
+                margin: 0;
+                padding: 8px 0;
+                font-size: 16px;
+                font-weight: 500;
+                line-height: 1.8;
             }
         }
     }
